# Nameplate

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: Nameplate.cpp  Nameplate.h  exports.def  versioninfo.rc.in
src/Ashita/: Ashita.cpp
src/Ashita-v3/: Ashita.cpp  exports.def  exports.h
src/Windozer/: Windozer.cpp  Windozer.h
src/bytes/: bytes.h
